log
Tue 12 Sep 2023 11:51:00 PM UTC: 
 tests:  1|8
total_score: 0/70
6595367
Thu 14 Sep 2023 07:38:51 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:27: error: ‘lt’ undeclared (first use in this function)
   43 |         map->lower_than = lt;
      |                           ^~
treemap.c:43:27: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:45:12: error: ‘TreeMap’ has no member named ‘size’
   45 |         map->size = 0;
      |            ^~
Compilation failed
e41be5a
Thu 14 Sep 2023 07:39:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:12: error: ‘TreeMap’ has no member named ‘size’
   45 |         map->size = 0;
      |            ^~
Compilation failed
e373c23
